Добавлена работа с БД
